public class Main {
    public static void main(String[] args) {
        ChillFlix chillFlix = new ChillFlix();   // Declaring the Variable userMenu to Refer to an Object. Short version: Declaring an Object.
        chillFlix.start();                       // Calling chillFlix's start() method;
    }
}